--- a/index.html
+++ b/index.html
@@ -43,6 +43,18 @@ function typeWriter() {
   }
 }
 </script>
+	<br>
+	<form name="contact" netlify>
+  <p>
+    <label>Name <input type="text" name="name" /></label>
+  </p>
+  <p>
+    <label>Email <input type="email" name="email" /></label>
+  </p>
+  <p>
+    <button type="submit">Send</button>
+  </p>
+</form>
 <br>
 	<a href="https://padlet.com/auth/login">Sign-in</a>
 	<a href="https://padlet.com/auth/signup">Sign-up</a>
