--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@ function typeWriter() {
 }
 </script>
 	<br>
+	<h3>Send Information to the owner</h3>
+	<p>Aishwarya</p>
 	<form name="contact" netlify>
   <p>
     <label>Name <input type="text" name="name" /></label>
