--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ function typeWriter() {
 </script>
 	<br>
 	<h3>Send Information to the owner</h3>
-	<p>Aishwarya Sivakumar</p>
+	<p>By using this advanced feature, You are notifying the owner that you have been on this site.</p>
 	<form name="contact" netlify>
   <p>
     <label>Name <input type="text" name="name" /></label>
