--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>LightCheese</title>
+	<title>AlaskBook</title>
 	<link rel = "icon" href = 
 "https://i.ibb.co/444YgX8/Logo.png" 
         type = "image/x-icon">
@@ -15,7 +15,7 @@ body {
 </style>
 </head>
 <body bgcolor="#b4e61d" style="color:#fff200" align="center">
-	<h1>LightCheese</h1>
+	<h1>AlaskBook</h1>
 	        <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
         <script>
   kofiWidgetOverlay.draw('srichasivaa', {
@@ -32,7 +32,7 @@ body {
 
 <script>
 var i = 0;
-var txt = 'Welcome to LightCheese! This is where you can post your content like short videos. This is mainly a short-video platform. This service was made in 25/10/2022 On a special day! This service was made by Sricharan Sivakumar. Hope you like our website & app.';
+var txt = 'Welcome to AlaskBook! This is where you can post your content like short videos. This is mainly a short-video platform. This service was made in 25/10/2022 On a special day! This service was made by Sricharan Sivakumar. Hope you like our website & app.';
 var speed = 40;
 
 function typeWriter() {
