--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>AlaskBook</title>
 	<link rel = "icon" href = 
-"https://i.ibb.co/444YgX8/Logo.png" 
+"https://i.postimg.cc/Nfjvvq4W/Logo2.png" 
         type = "image/x-icon">
         <link href='https://fonts.googleapis.com/css?family=ABeeZee' rel='stylesheet'>
 <style>
@@ -14,8 +14,9 @@ body {
 }
 </style>
 </head>
-<body bgcolor="#b4e61d" style="color:#fff200" align="center">
+<body bgcolor="black" style="color:#496a85" align="center">
 	<h1>AlaskBook</h1>
+	<img src="https://i.postimg.cc/Nfjvvq4W/Logo2.png">
 	        <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
         <script>
   kofiWidgetOverlay.draw('srichasivaa', {
