--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>AlaskBook</title>
 	<link rel = "icon" href = 
-"https://i.postimg.cc/Nfjvvq4W/Logo2.png" 
+"https://i.postimg.cc/bN4qgpDH/Logo4.png" 
         type = "image/x-icon">
         <link href='https://fonts.googleapis.com/css?family=ABeeZee' rel='stylesheet'>
 <style>
@@ -16,7 +16,7 @@ body {
 </head>
 <body bgcolor="black" style="color:#496a85" align="center">
 	<h1>AlaskBook</h1>
-	<img src="https://i.postimg.cc/Nfjvvq4W/Logo2.png">
+	<img src="https://i.postimg.cc/bN4qgpDH/Logo4.png">
 	        <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
         <script>
   kofiWidgetOverlay.draw('srichasivaa', {
